# django-pagination

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.md  CONTRIBUTORS.txt  COPYING  HACKING  MANIFEST  MANIFEST.in  README  README.MD  README.md  README.rst  README.txt  pyproject.toml  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  create-release.yml  publish.yml  release.yml
bootstrap_pagination/: tests.py
bootstrap_pagination/locale/de/LC_MESSAGES/: django.po
bootstrap_pagination/templates/pagination/: pagination.html
bootstrap_pagination/templatetags/: pagination_tags.py
doc/: changes.rst  conf.py  index.rst  installation.rst  usage.rst
docs/: Makefile  conf.py  index.html  index.rst  index.txt  install.rst  install.txt  usage.rst  usage.txt
linaro_django_pagination/: __init__.py  middleware.py  paginator.py  settings.py  tests.py
linaro_django_pagination/locale/de/LC_MESSAGES/: django.po
linaro_django_pagination/locale/es/LC_MESSAGES/: django.po
linaro_django_pagination/locale/fi/LC_MESSAGES/: django.po
linaro_django_pagination/locale/fr/LC_MESSAGES/: django.po
linaro_django_pagination/locale/it/LC_MESSAGES/: django.po
linaro_django_pagination/locale/nn/LC_MESSAGES/: django.po
linaro_django_pagination/locale/no/LC_MESSAGES/: django.po
linaro_django_pagination/locale/pl/LC_MESSAGES/: django.po
linaro_django_pagination/locale/pt/LC_MESSAGES/: django.po
linaro_django_pagination/locale/pt_BR/LC_MESSAGES/: django.po
linaro_django_pagination/locale/ru/LC_MESSAGES/: django.po
linaro_django_pagination/locale/tr/LC_MESSAGES/: django.po
linaro_django_pagination/templates/pagination/: pagination.html
linaro_django_pagination/templatetags/: pagination_tags.py
linaro_django_pagination/test_project/: manage.py  settings.py  tests.py  urls.py
linaro_django_pagination/test_project/example/: urls.py  views.py
linaro_django_pagination/tests/: __init__.py  runner.py  settings.py  test_main.py
pagination/: middleware.py  paginator.py  registration.py  tests.py
pagination/locale/ca/LC_MESSAGES/: django.mo  django.po
pagination/locale/cs/LC_MESSAGES/: django.mo  django.po
pagination/locale/de/LC_MESSAGES/: django.mo  django.po
pagination/locale/es/LC_MESSAGES/: django.mo  django.po
pagination/locale/fr/LC_MESSAGES/: django.mo
pagination/locale/it/LC_MESSAGES/: django.mo  django.po
pagination/locale/ky/LC_MESSAGES/: django.mo  django.po
pagination/templates/pagination/: default.html  pagination.html  perpageanchors.html  perpageselect.html  tailless_pagination.html  yipit_pagination.html
pagination/templatetags/: pagination_tags.py
tests/: runtests.py  settings.py  test_templatetags.py  urls.py
(+16 files in other folders)
